@@ -13,7 +13,8 @@ unused-import:55:4:unused_import_from:Unused namedtuple imported from collection
 unused-import:59:4:unused_import_in_function:Unused hexdigits imported from string
 unused-variable:64:4:hello:Unused variable 'my_var'
 unused-variable:76:4:function:Unused variable 'aaaa'
-global-statement:97:4:test_global:Using the global statement
+global-variable-not-assigned:97:4:test_global:Using global for 'PATH' but no assignment is done:HIGH
+global-variable-not-assigned:97:4:test_global:Using global for 'deque' but no assignment is done:HIGH
 unused-import:103:4:test_global:Unused platform imported from sys
 unused-import:104:4:test_global:Unused version imported from sys as VERSION
 unused-import:105:4:test_global:Unused import this
